# context-manager

./: .gitignore  AGENTS.md  README.md  pyproject.toml
context_manager/: __init__.py  compactor.py  mcp_server.py  memory.py  offload.py  sidecar.py  sidecar_client.py  store.py  token_estimator.py  windows.py
context_manager/dcp/: __init__.py  config.py  engine.py  middleware.py  placeholders.py  tool.py
docs/: tokenizer-drift.md
docs/design/: compactor-llm-callback.md  context-memory-roadmap.md  listing-and-drop-api.md  sidecar-architecture.md
docs/research/: compaction-research.md  dcp-cleanroom-spec.md  mission-driven-pruning-spike.md  spike-1-2-midstream-safety.md  spike-3-tail-size.md  spike-5-codex-rotation.md
etc/systemd/: context-manager-sidecar.service
prompts/autopilot/: cm-v03-persistent-loop.md
scripts/: sync_agent_dispatcher_dependency.py
scripts/autopilot/: cm-v03-persistent-loop.sh
tests/: test_compactor.py  test_listing_and_drops.py  test_offload.py  test_reset.py  test_sidecar.py  test_sidecar_client_and_mcp.py  test_store.py  test_sync_agent_dispatcher_dependency.py  test_token_estimator.py
tests/dcp/: __init__.py  test_engine.py  test_middleware.py  test_placeholders.py
tests/fixtures/: drift_pairs.json
tools/: dogfood_listing_drops.py  measure_drift.py
