[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-manager"
version = "0.2.0"
description = "Pluggable context + memory layer for agent dispatchers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "qike-ms" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "tiktoken>=0.7"]

[tool.setuptools.packages.find]
include = ["context_manager*"]
exclude = ["tests*"]
