[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-manager"
version = "0.2.0"
description = "Pluggable context + memory layer for agent dispatchers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "qike-ms" }]
dependencies = []

[project.optional-dependencies]
sidecar = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "tiktoken>=0.7", "fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]

[project.scripts]
context-manager-sidecar = "context_manager.sidecar:main"

[tool.setuptools.packages.find]
include = ["context_manager*"]
exclude = ["tests*"]
